Picking objects fails in pose mode #58911

Closed
opened 2018-12-07 07:33:23 +01:00 by ameen vengara · 3 comments

System Information
Operating system: Win 10
Graphics card: NVIDIA Geforce GTX 750

Blender Version
Broken: 2.8
Worked: 2.79
Short description of error
In pose mode, it is impossible to pick a target object with picker.

Exact steps for others to reproduce the error
Import a rigged character in your scene. Also add a cube or another object to your scene.
Go to pose mode of the rigged character. Select any of the hand bone > add a CHILD OF CONSTRAINT from the bone constraints tab >
in the CHILD OF CONSTRAINT box click the picker icon of the target input> try to click the cube to make it as the target. But nothing happens.

In order to work that, you have to go to OBJECT MODE first. then clicking works. In pose mode it doesn't. In previous versions it worked well.
Also why the pose mode is so restricted, you have to go to object mode every time to work with other objects. It was not like that. And this one makes it really difficult.

**System Information** Operating system: Win 10 Graphics card: NVIDIA Geforce GTX 750 **Blender Version** Broken: 2.8 Worked: 2.79 **Short description of error** In pose mode, it is impossible to pick a target object with picker. **Exact steps for others to reproduce the error** Import a rigged character in your scene. Also add a cube or another object to your scene. Go to pose mode of the rigged character. Select any of the hand bone > add a CHILD OF CONSTRAINT from the bone constraints tab > in the CHILD OF CONSTRAINT box click the picker icon of the target input> try to click the cube to make it as the target. But nothing happens. In order to work that, you have to go to OBJECT MODE first. then clicking works. In pose mode it doesn't. In previous versions it worked well. Also why the pose mode is so restricted, you have to go to object mode every time to work with other objects. It was not like that. And this one makes it really difficult.
Author

Added subscriber: @ameenvengara

Added subscriber: @ameenvengara
Campbell Barton changed title from Pose mode makes things difficult to Picking objects fails 2018-12-07 07:36:19 +01:00
Campbell Barton changed title from Picking objects fails to Picking objects fails in pose mode 2018-12-07 07:36:36 +01:00

This issue was referenced by 32aefb6fba

This issue was referenced by 32aefb6fbaa6478fec603e818adf0afb7646273c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58911
No description provided.