Fix T58911: Picking objects fails in pose mode